--- a/CsharpSlam/VrepSimpleTest/MainWindow.xaml
+++ b/CsharpSlam/VrepSimpleTest/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VrepSimpleTest.MainWindow"
+﻿<Window x:Class="CSharpSlam.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="V-REP simple test" Height="500" Width="800"
@@ -6,23 +6,23 @@
         DataContext="{Binding RelativeSource={RelativeSource Self}}">
     <Grid Margin="0,1,0,-1">
         <StackPanel HorizontalAlignment="Left" Width="200">
-            <Button Click="buttonConnect_Click" Background="IndianRed" Margin="4" Height="30" x:Name="buttonConnect">Connect</Button>
+            <Button Margin="4" Click="ButtonConnect_Click" Content="Connect" Background="IndianRed" Height="30" x:Name="ButtonConnect"/>
         </StackPanel>
-        <StackPanel HorizontalAlignment="Left" Width="200" Margin="0, 36, 0, 0"  x:Name="stackControls">
-            <Button Margin="4" Click="buttonFwd_Click" Content="Forward" x:Name="buttonFwd" />
-            <Button Margin="4" Click="buttonBck_Click" Content="Backward" x:Name="buttonBck"/>
-            <Button Margin="4" Click="buttonLeft_Click" Content="Left" x:Name="buttonLeft" />
-            <Button Margin="4" Click="buttonRight_Click" Content="Right" x:Name="buttonRight" />
-            <Button Margin="4" Click="buttonStop_Click"  Content="Stop" x:Name="buttonStop" Background="IndianRed"/>
-            <Button Margin="4" Click="buttonResetSim_Click"  Content="Reset simulation" x:Name="buttonResetSim" Background="LightCoral"/>
-            <Button Margin="4" Click="buttonLaserScanTest_Click"  x:Name="buttonScan" >Laser Scan test</Button>
-            <Button Margin="4" Click="buttonClearCanvas_Click" x:Name="buttonClearCanvas">Clear canvas</Button>
-            <TextBlock x:Name="txtData" Margin="4" Text="{Binding PositionString}" />
-            <TextBlock x:Name="txtInfo" Margin="4" Text="{Binding WheelString}"></TextBlock>
+        <StackPanel HorizontalAlignment="Left" Width="200" Margin="0, 36, 0, 0"  x:Name="StackControls">
+            <Button Margin="4" Click="ButtonFwd_Click" Content="Forward" x:Name="ButtonFwd" />
+            <Button Margin="4" Click="ButtonBack_Click" Content="Backward" x:Name="ButtonBck"/>
+            <Button Margin="4" Click="ButtonLeft_Click" Content="Left" x:Name="ButtonLeft" />
+            <Button Margin="4" Click="ButtonRight_Click" Content="Right" x:Name="ButtonRight" />
+            <Button Margin="4" Click="ButtonStop_Click"  Content="Stop" x:Name="ButtonStop" Background="IndianRed"/>
+            <Button Margin="4" Click="ButtonResetSim_Click"  Content="Reset simulation" x:Name="ButtonResetSim" Background="LightCoral"/>
+            <Button Margin="4" Click="ButtonLaserScanTest_Click"  x:Name="ButtonScan" >Laser Scan test</Button>
+            <Button Margin="4" Click="ButtonClearCanvas_Click" x:Name="ButtonClearCanvas">Clear canvas</Button>
+            <!--<TextBlock x:Name="TxtData" Margin="4" Text="{Binding PositionString}" />
+            <TextBlock x:Name="TxtInfo" Margin="4" Text="{Binding WheelString}"></TextBlock>-->
             <!-- <TextBox x:Name="txLength" Margin="4" Text="685" />  -->
         </StackPanel>
         <Grid Margin="205,0,0,0">
-            <Canvas Background="LightBlue" x:Name="canvScan" Margin="0,0,128,10" />
+            <Canvas Background="LightBlue" x:Name="CanvScan" Margin="0,0,128,10" />
         </Grid>
     </Grid>
 </Window>
